# citation-verifier

./: %{http_code}  .gitattributes  .gitignore  .replit  CHANGELOG.md  CLAUDE.md  EVALS.md  README.md  pyproject.toml  replit.nix
.claude/: launch.json  settings.json
benchmark/: README.md  ROADMAP.md  TODO.md
benchmark_v1/: README.md  _all_cl_misses.csv  _pre_cliff_misses.csv  _pre_cliff_misses_investigated.csv  _raw_pool.json  calibration.md  courtlistener-findings.html  outputs_sonnet.csv  report.html  results.csv  scorecards.md  truncation_experiment.md  truncation_experiment_60k.csv
briefs/: Are make-whole premiums enforceable if the debt is paid in bankruptcy Indenture governed under New Y.docx  Protege make-whole premiums.md  appellant-brief.txt  brief.txt
briefs-2/: gov.uscourts.lawd.207038.49.1_proposition_report.html  gov.uscourts.lawd.207038.49.1_run_notes.md
docs/: claims-csv-schema.md  consumer-surface-manifest.md  lq-ai-comparison.md  lq-ai-de279-issue-draft.md  lq-ai-roundtable-prep.md  sc-motion-error-taxonomy.md
gold_db/: README.md  gold.db
scratch/: Charlotin-hallucination_cases.csv  EXTRACTION_FIXES_SUMMARY.md  QC_TRIAGE.md  README.md  RESOLVED.md  ROADMAP.md  TODO.md  ab_sonnet_v1_ab_log.txt  ab_sonnet_v1_log.txt  ab_sonnet_v2_log.txt  ab_v2hints_log.txt  bankruptcy_docket_only_followup.md  cases_to_investigate.md  charlotin_bucketA_adjudication.csv  charlotin_fp_triage.csv  check_docket_only.py  check_indigo_book_coverage.py  citations_for_review.csv  citations_for_review.csv.bak  debug_parse_failure.py  docket_only_candidates.csv  docket_only_v2.csv  find_docket_only_cites.py  find_docket_only_v2.py  find_red_context.py  (+23 more)
(+1424 files in other folders)
