[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "citation-verifier"
version = "0.1.0"
description = "Verify legal citations against CourtListener"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28",
    "eyecite>=2.6",
    "python-dotenv>=1.0",
]

[project.scripts]
citation-verifier = "citation_verifier.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
