[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "citation-verifier"
version = "0.5.0"
description = "Verify legal citations against CourtListener"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28",
    "aiohttp>=3.9",
    "eyecite>=2.6",
    "python-dotenv>=1.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sse-starlette>=2.0",
    "certifi",
    "openai>=1.40",
    "anthropic>=0.40",
    "courts-db>=0.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pdfplumber>=0.11",
]
web = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sse-starlette>=2.0",
]

[project.scripts]
citation-verifier = "citation_verifier.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
citation_verifier = ["prompts/*.md"]

[tool.pytest.ini_options]
markers = [
    "live_api: tests that hit the real CourtListener API (deselect with -m 'not live_api')",
]
addopts = "-m 'not live_api'"
testpaths = ["tests"]
